s05-appprotect/hipsterstore-ingress-xnap.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hipsterstore-ingress-xnap
spec:
  rules:
  - host: hipsterstore-xnap.example.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
