s05-appprotect/hipsterstore-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    appprotect.f5.com/app-protect-enable: "True"
    appprotect.f5.com/app-protect-policy: default/dataguard-blocking
    appprotect.f5.com/app-protect-security-log: default/logconf
    appprotect.f5.com/app-protect-security-log-destination: syslog:server=10.1.1.5:5144
    appprotect.f5.com/app-protect-security-log-enable: "True"
    kubernetes.io/ingress.class: nginx
  name: hipsterstore-ingress
spec:
  rules:
  - host: hipsterstore.example.com
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 8080
